[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/objects/ennemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/Objects/Particle.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 58.0392

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.495454 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0397351, 0.688742, 1 )
colors = PoolColorArray( 0.6, 0.6, 0.6, 0.776471, 1, 1, 1, 0.439216, 1, 1, 1, 0 )

[node name="Ennemy" instance=ExtResource( 2 )]
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )

[node name="InfluenceArea" type="Area2D" parent="." index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea" index="0"]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="2"]
amount = 32
lifetime = 0.2
local_coords = false
gravity = Vector2( 0, 0 )
radial_accel = -50.0
angle = 135.0
angle_random = 0.6
scale_amount = 4.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 2 )
hue_variation = 0.96
hue_variation_random = 0.05
[connection signal="body_entered" from="." to="." method="_on_Ennemy_body_entered"]
[connection signal="body_entered" from="InfluenceArea" to="." method="_on_InfluenceArea_body_entered"]
[connection signal="body_exited" from="InfluenceArea" to="." method="_on_InfluenceArea_body_exited"]
